2007-12-17  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixDirectoryInfo.cs: Fix Parent property so that it properly handles
	  returning the parent of "/".  UnixPath.GetDirectoryName() returns "" on
	  "error", not null; act accordingly.
	* UnixDriveInfo.cs: Fix IsReady property so that it returns `false' if no
	  media is mounted.  The presence of media is determined by comparing the
	  Statvfs.f_fsid value of the current and parent directories; if they
	  differ, it is assumed that media is present, and thus the directory is
	  ready.  If they're identical, then media isn't present, and the directory
	  isn't ready.
	* UnixPath.cs: UnixPath.GetDirectoryName("/mnt") should return "/", not "".

2007-09-13  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixStream.cs: Don't read/write if the buffer has no data.  Fixes #82836.

2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>

	* MapAttribute.cs: Moved to ../Mono.Unix.Native/MapAttribute.cs.

2006-08-21  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixStream.cs: .Close() shouldn't close(2) the fd unless owner==true;
	  .Flush() should be a no-op (as System.IO.Stream.Flush doesn't gaurantee
	  that .Flush() actually flush to disk, and .Flush() slows things down a
	  lot); see: http://joeshaw.org/2006/08/21/415.

2006-08-16  Alp Toker  <alp@atoker.com>

	* UnixEndPoint.cs:
	* AbstractUnixEndPoint.cs: Second half of the fix for #79084.
		Add support for the abstract namespace, and update existing file-based
		UnixEndPoint (de)serialization to reflect changes in the runtime.

2006-07-02  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixSymbolicLinkInfo.cs: Oops.  CreateSymbolicLinkTo() should create
	  FullPath, not OriginalName.  This was fixed in one overload in January,
	  but I missed an overload. :-/

2006-07-02  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixPath.cs: Follow .NET's System.IO.Path.Combine() behavior, and "reset"
	  the generated path if any argument beings with a path root --